--- a/rush.yaml
+++ b/rush.yaml
@@ -32169,7 +32169,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 5 or higher monster(s) face-up while you have a face-up Winged Beast Type monster on your field.
+    When your opponent Normal or Special Summons a Level 5 or higher monster face-up while you have a face-up Winged Beast Type monster on your field.
   de:
   es:
   fr:
@@ -32441,7 +32441,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 6 or higher monster(s) face-up while you have "Summoned Skull" or a Level 7 or higher Fiend Type Normal Monster face-up on your field.
+    When your opponent Normal or Special Summons a Level 6 or higher monster face-up while you have "Summoned Skull" or a Level 7 or higher Fiend Type Normal Monster face-up on your field.
   de:
   es:
   fr:
@@ -53700,7 +53700,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 7 Normal Monster from your hand or your Graveyard face-up to your field. This turn, the monster Special Summoned by this effect gains 700 ATK and cannot be destroyed by your opponent's Trap Card effects.
+    Special Summon 1 Level 7 Normal Monster from your hand or your Graveyard face-up to your field. This turn, the monster Special Summoned by this effect gains 700 ATK, and cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
@@ -59459,7 +59459,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 7 or higher monster(s) face-up while you have a face-up Reptile Type monster on your field.
+    When your opponent Normal or Special Summons a Level 7 or higher monster face-up while you have a face-up Reptile Type monster on your field.
   de:
   es:
   fr:
@@ -59978,7 +59978,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, the Levels of 1 face-up monster on your field and 1 face-up monster on your opponent's field are increased by 2, and they gain 500 ATK.
+    This turn, 1 face-up monster on your field and 1 face-up monster on your opponent's field gain 500 ATK, and their Levels are increased by 2.
   de:
   es:
   fr:
@@ -64365,7 +64365,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your EARTH Attribute monster is destroyed by an opponent's attack.
+    When an EARTH Attribute monster on your field is destroyed in battle by an opponent's attack.
   de:
   es:
   fr:
@@ -69882,7 +69882,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 7 or higher monster(s) face-up.
+    When your opponent Normal or Special Summons a Level 7 or higher monster face-up.
   de:
   es:
   fr:
@@ -76387,7 +76387,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 5 or higher monster(s) face-up.
+    When your opponent Normal or Special Summons a Level 5 or higher monster face-up.
   de:
   es:
   fr:
@@ -84826,7 +84826,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 5 or higher monster(s) face-up, pay 500 LP.
+    When your opponent Normal or Special Summons a Level 5 or higher monster face-up, pay 500 LP.
   de:
   es:
   fr:
@@ -86158,7 +86158,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    Increase this card's Level by 6, and it cannot be destroyed by your opponent's Trap Card effects.
+    This card cannot be destroyed by your opponent's Trap Card effects, and its Level is increased by 6.
   de:
   es:
   fr:
@@ -90361,7 +90361,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 8 or lower monster(s) face-up, send 1 face-up Level 5 or higher monster from your field to the Graveyard.
+    When your opponent Normal or Special Summons a Level 8 or lower monster face-up, send 1 face-up Level 5 or higher monster from your field to the Graveyard.
   de:
   es:
   fr:
@@ -92413,7 +92413,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, if you sent a Normal Monster to the Graveyard to meet the requirement, this face-up card can be treated as 2 Tributes for the Tribute Summon of a monster with 200 DEF in Attack Position this turn.
+    Draw 1 card. Then, if you sent a Normal Monster to the Graveyard to meet the requirement, this turn, this face-up card can be treated as 2 Tributes for the Tribute Summon of a monster with 200 DEF in Attack Position.
   de:
   es:
   fr:
@@ -95566,7 +95566,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 7 or higher monster(s) face-up while you have a face-up Level 7 or higher EARTH Attribute Machine Type monster on your field.
+    When your opponent Normal or Special Summons a Level 7 or higher monster face-up while you have a face-up Level 7 or higher EARTH Attribute Machine Type monster on your field.
   de:
   es:
   fr:
@@ -101696,7 +101696,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 5 or higher monster(s) face-up.
+    When your opponent Normal or Special Summons a Level 5 or higher monster face-up.
   de:
   es:
   fr:
@@ -106858,7 +106858,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 8 or lower monster(s) face-up, send 1 monster from your field to the Graveyard.
+    When your opponent Normal or Special Summons a Level 8 or lower monster face-up, send 1 monster from your field to the Graveyard.
   de:
   es:
   fr:
@@ -106990,7 +106990,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 8 or lower monster(s) face-up, shuffle 3 LIGHT Attribute Spellcaster Type monsters from your Graveyard into the Deck.
+    When your opponent Normal or Special Summons a Level 8 or lower monster face-up, shuffle 3 LIGHT Attribute Spellcaster Type monsters from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -107286,7 +107286,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card's name becomes "Harpie Ladies", and it cannot be destroyed by your opponent's Trap Card effects. Also, if this card is in Maximum Mode, increase its Level by 5.
+    This card's name becomes "Harpie Ladies", and cannot be destroyed by your opponent's Trap Card effects. Also, if this card is in Maximum Mode, increase its Level by 5.
   de:
   es:
   fr:
@@ -107466,7 +107466,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card's name becomes "Harpie Ladies", and it cannot be destroyed by your opponent's monster effects. Also, if this card is in Maximum Mode, it can make up to 3 attacks on monsters during each turn.
+    This card's name becomes "Harpie Ladies", and cannot be destroyed by your opponent's monster effects. Also, if this card is in Maximum Mode, it can make up to 3 attacks on monsters during each turn.
   de:
   es:
   fr:
@@ -110137,7 +110137,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 7 or higher monster(s) face-up, send all monsters from your field to the Graveyard.
+    When your opponent Normal or Special Summons a Level 7 or higher monster face-up, send all monsters from your field to the Graveyard.
   de:
   es:
   fr:
@@ -114789,7 +114789,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons an Effect Monster(s) face-up.
+    When your opponent Normal or Special Summons an Effect Monster face-up.
   de:
   es:
   fr:
@@ -117162,7 +117162,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of your Deck to the Graveyard. Then, you can Special Summon 2 "Straynge Cat" from your Graveyard face-up to your field. If you Special Summoned by this effect, this face-up card and the monsters Special Summoned by this effect can be treated as 2 Tributes for the Tribute Summon of a monster in Attack Position this turn.
+    Send the top 2 cards of your Deck to the Graveyard. Then, you can Special Summon 2 "Straynge Cat" from your Graveyard face-up to your field. If you Special Summoned by this effect, this turn, this face-up card and the monsters Special Summoned by this effect can be treated as 2 Tributes for the Tribute Summon of a monster in Attack Position.
   de:
   es:
   fr:
@@ -120718,7 +120718,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Until the end of your opponent's next turn, this card's Level is increased by 1, and it cannot be destroyed by your opponent's card effects. Then, you can shuffle up to 1 face-down card from your opponent's field into the owner's Deck for every 3 cards sent to the Graveyard to meet the requirement.
+    Until the end of your opponent's next turn, this card cannot be destroyed by your opponent's card effects, and its Level is increased by 1. Also, you can shuffle up to 1 face-down card from your opponent's field into the owner's Deck for every 3 cards sent to the Graveyard to meet the requirement.
   de:
   es:
   fr:
