--- a/rush.yaml
+++ b/rush.yaml
@@ -124595,3 +124595,60 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1024564
+---
+konami_id:
+name:
+  en: Maid's Mischief
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: メイドのいたずら
+  ja_romaji: Meido no Itazura
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top 2 cards of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Shuffle up to 2 monsters from your opponent's Graveyard into the Deck. Then, you can draw cards equal to [the number of Level 7 Effect Monsters shuffled by this effect].
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: MaidsMischief-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP060
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1024752
