--- a/data/cards/36472900.yaml
+++ b/data/cards/36472900.yaml
@@ -122,7 +122,7 @@ sets:
     rarities:
     - Common
   - set_number: YSD3-JP010
-    set_name: Starter Deck 2008 Tournament Promotional Cards
+    set_name: Starter Deck 2008 Tournament promotional card
     rarities:
     - Normal Parallel Rare
   - set_number: YSD4-JP017
