--- a/data/rush/18975.yaml
+++ b/data/rush/18975.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 face-up monster on your opponent's field, and send monsters from your hand to the Graveyard whose total Levels equal the chosen monster's Level. This turn, if you would Tribute Summon a monster, you can Tribute the chosen opponent's face-up monster instead of 1 monster on your field.
+    Send monsters from your hand to the Graveyard whose total Levels equal the Level of 1 face-up monster on your opponent's field. This turn, if you would Tribute Summon a monster, you can Tribute that opponent's face-up monster instead of 1 monster on your field.
   de:
   es:
   fr:
