--- a/data/rush/19567.yaml
+++ b/data/rush/19567.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 monster from your Graveyard face-up to your field. Then, if you have a High Dragon Type monster in your Graveyard, the monster Special Summoned by this effect gains 1000 ATK until the end of this turn.
+    Special Summon 1 monster from your Graveyard face-up to your field. Then, if you have a High Dragon Type monster in your Graveyard, it gains 1000 ATK until the end of this turn.
   de:
   es:
   fr:
