--- a/data/rush/18595.yaml
+++ b/data/rush/18595.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Normal Monster from your Graveyard face-up to your field. Then, this turn, this card's name becomes the same as the name of the monster Special Summoned by this effect.
+    Special Summon 1 Normal Monster from your Graveyard face-up to your field. Then, this turn, this card's name becomes the same as its name.
   de:
   es:
   fr:
