--- a/data/rush/19596.yaml
+++ b/data/rush/19596.yaml
@@ -29,7 +29,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the number of Spell Cards in your Graveyard] x 100. Also, if you have 5 or more Spell Cards in your Graveyard, this card gains additional 500 ATK.
+    This card gains ATK equal to [the number of Spell Cards in your Graveyard] x 100. Also, it gains additional 500 ATK, if you have 5 or more Spell Cards in your Graveyard.
   de:
   es:
   fr:
