--- a/data/rush/yugipedia1023694.yaml
+++ b/data/rush/yugipedia1023694.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send Normal Monsters from your hand to the Graveyard whose total Levels equal the Level of 1 face-up monster on your opponent's field. Then, you can make this card gain ATK equal to [the ATK of that face-up monster] until the end of this turn.
+    Send Normal Monsters from your hand to the Graveyard whose total Levels equal the Level of 1 face-up monster on your opponent's field. Then, you can make this card gain ATK equal to [that face-up monster's ATK] until the end of this turn.
   de:
   es:
   fr:
