--- a/data/rush/17538.yaml
+++ b/data/rush/17538.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 2 face-up monsters with different Types on your field. This turn, the chosen monsters can be treated as 2 Tributes for the Tribute Summon of a monster in Attack Position. If you have a face-up Level 6 monster with 500 DEF on your field, inflict 800 damage to your opponent.
+    Choose 2 face-up monsters with different Types on your field. This turn, those monsters can be treated as 2 Tributes for the Tribute Summon of a monster in Attack Position. If you have a face-up Level 6 monster with 500 DEF on your field, inflict 800 damage to your opponent.
   de:
   es:
   fr:
