--- a/data/rush/18254.yaml
+++ b/data/rush/18254.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. Then, if you sent a Psychic Type monster to the Graveyard by this effect, you can choose 1 face-up Psychic Type monster on your field. This turn, the chosen monster can be treated as 2 Tributes for the Tribute Summon of a WIND Attribute Psychic Type monster in Attack Position.
+    Send the top card of your Deck to the Graveyard. Then, if you sent a Psychic Type monster to the Graveyard by this effect, you can choose 1 face-up Psychic Type monster on your field. This turn, that monster can be treated as 2 Tributes for the Tribute Summon of a WIND Attribute Psychic Type monster in Attack Position.
   de:
   es:
   fr:
