--- a/data/rush/18290.yaml
+++ b/data/rush/18290.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Increase the Level of the equipped monster by 2 and its ATK/DEF by 200.
+    The equipped monster gains 200 ATK/DEF, and its Level is increased by 2.
   de:
   es:
   fr:
