--- a/data/rush/yugipedia1024752.yaml
+++ b/data/rush/yugipedia1024752.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの上からカード２枚を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手の墓地のモンスターを２体まで選んでデッキに戻す。その後、自分は［この効果で戻した効果モンスター（レベル７）の数］だけドローできる。
   ko:
   zh-TW:
   zh-CN:
