--- a/data/rush/17201.yaml
+++ b/data/rush/17201.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 face-up Level 7 or higher monster on your opponent's field. Inflict damage to your opponent equal to [the difference in ATK between the chosen monster and this card]. This card gains ATK equal to [the chosen monster's ATK] until the end of this turn.
+    Choose 1 face-up Level 7 or higher monster on your opponent's field. Inflict damage to your opponent equal to [the difference in ATK between that monster and this card]. This card gains ATK equal to [that monster's ATK] until the end of this turn.
   de:
   es:
   fr:
