--- a/data/rush/17695.yaml
+++ b/data/rush/17695.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Take damage equal to [the total ATK of the face-up Level 8 or lower monsters on your opponent's field]. Then, if you took damage by this effect, destroy all face-up Level 8 or lower monsters on your opponent's field.
+    Take damage equal to [the total ATK of face-up Level 8 or lower monsters on your opponent's field]. Then, if you took damage by this effect, destroy all face-up Level 8 or lower monsters on your opponent's field.
   de:
   es:
   fr:
