--- a/data/rush/18275.yaml
+++ b/data/rush/18275.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 300 ATK and cannot be destroyed by your opponent's Trap Card effects.
+    The equipped monster gains 300 ATK, and cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
