--- a/data/rush/18282.yaml
+++ b/data/rush/18282.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains ATK equal to [the number of different Attributes in your Graveyard] x 400 and cannot be destroyed by your opponent's Trap Card effects.
+    The equipped monster gains ATK equal to [the number of different Attributes in your Graveyard] x 400, and cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
