--- a/data/rush/18592.yaml
+++ b/data/rush/18592.yaml
@@ -30,7 +30,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the total number of Equip Spell Cards equipped to this card and the number of face-up Normal Monsters on your opponent's field] x 500.
+    This card gains ATK equal to [the total number of Equip Spell Cards equipped to this card and face-up Normal Monsters on your opponent's field] x 500.
   de:
   es:
   fr:
