--- a/data/rush/18719.yaml
+++ b/data/rush/18719.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 200 ATK/DEF. Also, if the equipped monster is "Master Craftsman Kotetsu" or a Legend monster whose original Level is 4 or lower, it gains ATK equal to [its original ATK].
+    The equipped monster gains 200 ATK/DEF. Also, if the equipped monster is "Master Craftsman Kotetsu" or a Legend monster whose original Level is 4 or lower, it gains additional [its original ATK] ATK.
   de:
   es:
   fr:
