--- a/data/rush/18771.yaml
+++ b/data/rush/18771.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Sea Serpent Type monster on your field gains 400 ATK until the end of this turn. Then, if you have no monsters in your Graveyard, that monster on your field gains 600 ATK until the end of this turn.
+    1 face-up Sea Serpent Type monster on your field gains 400 ATK until the end of this turn. Then, it gains additional 600 ATK until the end of this turn, if you have no monsters in your Graveyard.
   de:
   es:
   fr:
