--- a/data/rush/18967.yaml
+++ b/data/rush/18967.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose up to 9 monsters in any Graveyard(s). Inflict damage to your opponent equal to [the number of chosen monsters] x 200, and this card gains ATK equal to [the number of chosen monsters] x 200 until the end of this turn. Then, shuffle the chosen monsters into the owner's Deck.
+    Choose up to 9 monsters in any Graveyard(s). Inflict damage to your opponent equal to [the number of those monsters] x 200, and this card gains ATK equal to [the number of those monsters] x 200 until the end of this turn. Then, shuffle those monsters into the owner's Deck.
   de:
   es:
   fr:
