--- a/data/rush/19590.yaml
+++ b/data/rush/19590.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    All face-up monsters on your field gain 200 ATK until the end of this turn. Then, you can choose 1 face-up Effect Monster on your opponent's field. If you do, your opponent cannot activate the chosen monster's effects this turn.
+    All face-up monsters on your field gain 200 ATK until the end of this turn. Then, you can choose 1 face-up Effect Monster on your opponent's field. If you do, your opponent cannot activate that monster's effects this turn.
   de:
   es:
   fr:
