--- a/rush.yaml
+++ b/rush.yaml
@@ -43526,7 +43526,7 @@ effect_types:
 effect:
   en: |-
     ● Destroy 1 face-down card on your opponent's field.
-    ● 1 face-up Cyborg Type monster on your field gains ATK equal to [the total ATK of the face-up Warrior Type monsters on your opponent's field] until the end of this turn.
+    ● 1 face-up Cyborg Type monster on your field gains ATK equal to [the total ATK of face-up Warrior Type monsters on your opponent's field] until the end of this turn.
   de:
   es:
   fr:
@@ -52923,7 +52923,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 face-up Level 7 or higher monster on your opponent's field. Inflict damage to your opponent equal to [the difference in ATK between the chosen monster and this card]. This card gains ATK equal to [the chosen monster's ATK] until the end of this turn.
+    Choose 1 face-up Level 7 or higher monster on your opponent's field. Inflict damage to your opponent equal to [the difference in ATK between that monster and this card]. This card gains ATK equal to [that monster's ATK] until the end of this turn.
   de:
   es:
   fr:
@@ -62754,7 +62754,7 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● This turn, this card gains ATK equal to [the number of different Types in your Graveyard] x 700, and it can make up to 2 attacks on monsters.
+    ● This turn, this card gains ATK equal to [the number of different Types in your Graveyard] x 700, and can make up to 2 attacks on monsters.
     ● Destroy all face-up cards on the field.
   de:
   es:
@@ -63257,7 +63257,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 face-up Galaxy Type monster on your field. If it attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Then, if the chosen monster is a Normal Monster, you can change the battle position of 1 monster on your opponent's field (Attack Position becomes face-up Defense Position, Defense Position becomes face-up Attack Position).
+    Choose 1 face-up Galaxy Type monster on your field. If it attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Then, if that monster is a Normal Monster, you can change the battle position of 1 monster on your opponent's field (Attack Position becomes face-up Defense Position, Defense Position becomes face-up Attack Position).
   de:
   es:
   fr:
@@ -63838,7 +63838,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 2 face-up monsters with different Types on your field. This turn, the chosen monsters can be treated as 2 Tributes for the Tribute Summon of a monster in Attack Position. If you have a face-up Level 6 monster with 500 DEF on your field, inflict 800 damage to your opponent.
+    Choose 2 face-up monsters with different Types on your field. This turn, those monsters can be treated as 2 Tributes for the Tribute Summon of a monster in Attack Position. If you have a face-up Level 6 monster with 500 DEF on your field, inflict 800 damage to your opponent.
   de:
   es:
   fr:
@@ -69771,7 +69771,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Take damage equal to [the total ATK of the face-up Level 8 or lower monsters on your opponent's field]. Then, if you took damage by this effect, destroy all face-up Level 8 or lower monsters on your opponent's field.
+    Take damage equal to [the total ATK of face-up Level 8 or lower monsters on your opponent's field]. Then, if you took damage by this effect, destroy all face-up Level 8 or lower monsters on your opponent's field.
   de:
   es:
   fr:
@@ -78220,7 +78220,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose up to 7 Dragon Type monsters in your Graveyard. Inflict damage to your opponent equal to [the number of chosen monsters] x 100, and this card gains ATK equal to [the number of chosen monsters] x 100 until the end of this turn. Then, shuffle the chosen monsters into the Deck.
+    Choose up to 7 Dragon Type monsters in your Graveyard. Inflict damage to your opponent equal to [the number of those monsters] x 100, and this card gains ATK equal to [the number of those monsters] x 100 until the end of this turn. Then, shuffle those monsters into the Deck.
   de:
   es:
   fr:
@@ -82152,7 +82152,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. Then, if you sent a Psychic Type monster to the Graveyard by this effect, you can choose 1 face-up Psychic Type monster on your field. This turn, the chosen monster can be treated as 2 Tributes for the Tribute Summon of a WIND Attribute Psychic Type monster in Attack Position.
+    Send the top card of your Deck to the Graveyard. Then, if you sent a Psychic Type monster to the Graveyard by this effect, you can choose 1 face-up Psychic Type monster on your field. This turn, that monster can be treated as 2 Tributes for the Tribute Summon of a WIND Attribute Psychic Type monster in Attack Position.
   de:
   es:
   fr:
@@ -83649,7 +83649,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 300 ATK and cannot be destroyed by your opponent's Trap Card effects.
+    The equipped monster gains 300 ATK, and cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
@@ -84118,7 +84118,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains ATK equal to [the number of different Attributes in your Graveyard] x 400 and cannot be destroyed by your opponent's Trap Card effects.
+    The equipped monster gains ATK equal to [the number of different Attributes in your Graveyard] x 400, and cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
@@ -84236,7 +84236,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Send 1 WIND Attribute Psychic Type monster from your hand to the Graveyard and equip this card to 1 face-up Psychic Type monster on your field.
+    Send 1 WIND Attribute Psychic Type monster from your hand to the Graveyard, and equip this card to 1 face-up Psychic Type monster on your field.
   de:
   es:
   fr:
@@ -84643,7 +84643,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Increase the Level of the equipped monster by 2 and its ATK/DEF by 200.
+    The equipped monster gains 200 ATK/DEF, and its Level is increased by 2.
   de:
   es:
   fr:
@@ -92052,7 +92052,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the total number of Equip Spell Cards equipped to this card and the number of face-up Normal Monsters on your opponent's field] x 500.
+    This card gains ATK equal to [the total number of Equip Spell Cards equipped to this card and face-up Normal Monsters on your opponent's field] x 500.
   de:
   es:
   fr:
@@ -94782,7 +94782,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains ATK equal to [the number of equipped Equip Spell Cards on the field] x 1000 and cannot be destroyed by your opponent's Trap Card effects.
+    The equipped monster gains ATK equal to [the number of equipped Equip Spell Cards on the field] x 1000, and cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
@@ -99378,7 +99378,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 200 ATK/DEF. Also, if the equipped monster is "Master Craftsman Kotetsu" or a Legend monster whose original Level is 4 or lower, it gains ATK equal to [its original ATK].
+    The equipped monster gains 200 ATK/DEF. Also, if the equipped monster is "Master Craftsman Kotetsu" or a Legend monster whose original Level is 4 or lower, it gains additional [its original ATK] ATK.
   de:
   es:
   fr:
@@ -100740,7 +100740,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Sea Serpent Type monster on your field gains 400 ATK until the end of this turn. Then, if you have no monsters in your Graveyard, that monster on your field gains 600 ATK until the end of this turn.
+    1 face-up Sea Serpent Type monster on your field gains 400 ATK until the end of this turn. Then, it gains additional 600 ATK until the end of this turn, if you have no monsters in your Graveyard.
   de:
   es:
   fr:
@@ -105030,7 +105030,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose up to 9 monsters in any Graveyard(s). Inflict damage to your opponent equal to [the number of chosen monsters] x 200, and this card gains ATK equal to [the number of chosen monsters] x 200 until the end of this turn. Then, shuffle the chosen monsters into the owner's Deck.
+    Choose up to 9 monsters in any Graveyard(s). Inflict damage to your opponent equal to [the number of those monsters] x 200, and this card gains ATK equal to [the number of those monsters] x 200 until the end of this turn. Then, shuffle those monsters into the owner's Deck.
   de:
   es:
   fr:
@@ -105796,7 +105796,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 200 ATK/DEF and cannot be destroyed by your opponent's Trap Card effects.
+    The equipped monster gains 200 ATK/DEF, and cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
@@ -106202,7 +106202,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 400 ATK and cannot be destroyed by your opponent's card effects. Also, if the equipped monster is a Fusion Monster, it gains additional 600 ATK.
+    The equipped monster gains 400 ATK, and cannot be destroyed by your opponent's card effects. Also, if the equipped monster is a Fusion Monster, it gains additional 600 ATK.
   de:
   es:
   fr:
@@ -106454,7 +106454,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Shuffle 1 monster from your Graveyard into the Deck and equip this card to 1 face-up monster on your field.
+    Shuffle 1 monster from your Graveyard into the Deck, and equip this card to 1 face-up monster on your field.
   de:
   es:
   fr:
@@ -117162,7 +117162,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of your Deck to the Graveyard. Then, you can Special Summon 2 "Straynge Cat" from your Graveyard face-up to your field. If you Special Summoned by this effect, this turn, this face-up card and the monsters Special Summoned by this effect can be treated as 2 Tributes for the Tribute Summon of a monster in Attack Position.
+    Send the top 2 cards of your Deck to the Graveyard. Then, you can Special Summon 2 "Straynge Cat" from your Graveyard face-up to your field. If you Special Summoned by this effect, this turn, this face-up card and those monsters can be treated as 2 Tributes for the Tribute Summon of a monster in Attack Position.
   de:
   es:
   fr:
@@ -117761,7 +117761,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your opponent's field loses 1500 ATK until the end of this turn. Then, you can choose 1 face-up monster on your field with the same Level and Type as that monster. If you do, that monster on your field can attack twice during this turn.
+    1 face-up monster on your opponent's field loses 1500 ATK until the end of this turn. Then, you can choose 1 face-up monster on your field with the same Level and Type as that monster. If you do, your monster can attack twice during this turn.
   de:
   es:
   fr:
@@ -119556,7 +119556,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    All face-up monsters on your field gain 200 ATK until the end of this turn. Then, you can choose 1 face-up Effect Monster on your opponent's field. If you do, your opponent cannot activate the chosen monster's effects this turn.
+    All face-up monsters on your field gain 200 ATK until the end of this turn. Then, you can choose 1 face-up Effect Monster on your opponent's field. If you do, your opponent cannot activate that monster's effects this turn.
   de:
   es:
   fr:
@@ -120782,7 +120782,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose up to 3 DARK Attribute monsters in your Graveyard. Inflict damage to your opponent equal to [the total Levels of the chosen monsters] x 100, and this card gains ATK equal to [the total Levels of the chosen monsters] x 100 until the end of this turn. Then, shuffle the chosen monsters into the Deck.
+    Choose up to 3 DARK Attribute monsters in your Graveyard. Inflict damage to your opponent equal to [the total Levels of those monsters] x 100, and this card gains ATK equal to [the total Levels of those monsters] x 100 until the end of this turn. Then, shuffle those monsters into the Deck.
   de:
   es:
   fr:
@@ -123069,7 +123069,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 300 ATK. Also, if the equipped monster is a non-Effect Fusion Monster, it gains additional 700 ATK and cannot be destroyed by your opponent's card effects.
+    The equipped monster gains 300 ATK. Also, if the equipped monster is a non-Effect Fusion Monster, it gains additional 700 ATK, and cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
@@ -124618,7 +124618,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの上からカード２枚を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -124630,7 +124631,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手の墓地のモンスターを２体まで選んでデッキに戻す。その後、自分は［この効果で戻した効果モンスター（レベル７）の数］だけドローできる。
   ko:
   zh-TW:
   zh-CN:
