--- a/data/rush/19594.yaml
+++ b/data/rush/19594.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, face-up EARTH Attribute and DARK Attribute Beast-Warrior Type monsters with 1600 or more original ATK on the field gain 400 ATK/DEF and cannot be destroyed by card effects.
+    While this card is face-up in the Field Zone, face-up EARTH Attribute and DARK Attribute Beast-Warrior Type monsters with 1600 or more original ATK on the field gain 400 ATK/DEF, and cannot be destroyed by card effects.
   de:
   es:
   fr:
