--- a/rush.yaml
+++ b/rush.yaml
@@ -100740,7 +100740,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Sea Serpent Type monster on your field gains 400 ATK until the end of this turn. Then, it gains additional 600 ATK until the end of this turn, if you have no monsters in your Graveyard.
+    1 face-up Sea Serpent Type monster on your field gains 400 ATK until the end of this turn. Then, you can make it gain additional 600 ATK until the end of this turn, if you have no monsters in your Graveyard.
   de:
   es:
   fr:
@@ -117162,7 +117162,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of your Deck to the Graveyard. Then, you can Special Summon 2 "Straynge Cat" from your Graveyard face-up to your field. If you Special Summoned by this effect, this turn, this face-up card and those monsters can be treated as 2 Tributes for the Tribute Summon of a monster in Attack Position.
+    Send the top 2 cards of your Deck to the Graveyard. Then, you can Special Summon 2 "Straynge Cat" from your Graveyard face-up to your field. If you Special Summoned by this effect, this turn, this face-up card and they can be treated as 2 Tributes for the Tribute Summon of a monster in Attack Position.
   de:
   es:
   fr:
