--- a/data/cards/02815176.yaml
+++ b/data/cards/02815176.yaml
@@ -1,7 +1,7 @@
 konami_id: 19384
 password: 2815176
 name:
-  en: Divine Oddity of Valmonica - Zebufera
+  en: Zebufera, Vaalmonican Hallow Heathen
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Effect Monster
-    Cannot be Link Summoned unless you have a Fiend Monster Card with 3 or more Resonance Counters in your Pendulum Zone. You can only Special Summon "Divine Oddity of Valmonica - Zebufera(s)" once per turn. If a card(s) you control would be destroyed by battle or card effect, you can remove 3 Resonance Counters from your Pendulum Zone instead. Once per opponent's turn (Quick Effect): You can target 1 of your "Valmonica" Normal Spells/Traps that is banished or in your GY; apply that Spell/Trap's effect when that card is activated.
+    Cannot be Link Summoned unless you have a Fiend Monster Card with 3 or more Resonance Counters in your Pendulum Zone. You can only Special Summon "Zebufera, Vaalmonican Hallow Heathen(s)" once per turn. If a card(s) you control would be destroyed by battle or card effect, you can remove 3 Resonance Counters from your Pendulum Zone instead. Once per opponent's turn (Quick Effect): You can target 1 of your "Vaalmonica" Normal Spells/Traps that is banished or in your GY; apply that Spell/Trap's effect when that card is activated.
   de:
   es:
   fr:
@@ -36,10 +36,10 @@ link_arrows:
 atk: 2500
 materials: 1 Effect Monster
 series:
-- Valmonica
+- Vaalmonica
 images:
 - index: 1
-  image: DivineOddityofValmonicaZebufera-DBVS-JP-SR.png
+  image: ZebuferaVaalmonicanHallowHeathen-DBVS-JP-SR.png
 sets:
   ja:
   - set_number: DBVS-JP034
@@ -50,8 +50,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1001773
