--- a/data/cards/04582942.yaml
+++ b/data/cards/04582942.yaml
@@ -1,7 +1,7 @@
 konami_id: 19389
 password: 4582942
 name:
-  en: Valmonica of the Guiding Rhythm
+  en: Vaalmonica Followed Rhythm
   de:
   es:
   fr:
@@ -15,10 +15,10 @@ name:
   zh-CN:
 text:
   en: |-
-    You must control a "Valmonica" Monster Card to activate and to resolve this effect. Apply 1 of these effects, or, if you control a "Valmonica" Link Monster, you can apply both, in sequence.
+    You must control a "Vaalmonica" Monster Card to activate and to resolve this effect. Apply 1 of these effects, or, if you control a "Vaalmonica" Link Monster, you can apply both, in sequence.
     ● Gain 500 LP, then you can destroy 1 Spell/Trap on the field.
     ● Take 500 damage, then you can return 1 monster on the field to the hand.
-    You can only activate 1 "Valmonica of the Guiding Rhythm" per turn.
+    You can only activate 1 "Vaalmonica Followed Rhythm" per turn.
   de:
   es:
   fr:
@@ -34,10 +34,10 @@ text:
 card_type: Trap
 property: Normal
 series:
-- Valmonica
+- Vaalmonica
 images:
 - index: 1
-  image: ValmonicaoftheGuidingRhythm-DBVS-JP-C.png
+  image: VaalmonicaFollowedRhythm-DBVS-JP-C.png
 sets:
   ja:
   - set_number: DBVS-JP039
@@ -49,8 +49,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1001785
