--- a/data/cards/05605529.yaml
+++ b/data/cards/05605529.yaml
@@ -1,7 +1,7 @@
 konami_id: 19386
 password: 5605529
 name:
-  en: Valmonica Scelta
+  en: Vaalmonica Scelta
   de:
   es:
   fr:
@@ -15,10 +15,10 @@ name:
   zh-CN:
 text:
   en: |-
-    Apply 1 of these effects (your opponent's choice, if you do not have a "Valmonica" card in your Pendulum Zone).
+    Apply 1 of these effects (your opponent's choice, if you do not have a "Vaalmonica" card in your Pendulum Zone).
     ● Gain 500 LP, then you can place 1 card from your hand on the bottom of the Deck, and if you do, draw 2 cards.
-    ● Take 500 damage, then you can add 1 "Valmonica" Spell/Trap from your Deck to your hand, except "Valmonica Scelta".
-    You can only activate 1 "Valmonica Scelta" per turn.
+    ● Take 500 damage, then you can add 1 "Vaalmonica" Spell/Trap from your Deck to your hand, except "Vaalmonica Scelta".
+    You can only activate 1 "Vaalmonica Scelta" per turn.
   de:
   es:
   fr:
@@ -34,10 +34,10 @@ text:
 card_type: Spell
 property: Normal
 series:
-- Valmonica
+- Vaalmonica
 images:
 - index: 1
-  image: ValmonicaScelta-DBVS-JP-UR.png
+  image: VaalmonicaScelta-DBVS-JP-UR.png
 sets:
   ja:
   - set_number: DBVS-JP036
@@ -49,8 +49,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1004546
