--- a/data/cards/30432463.yaml
+++ b/data/cards/30432463.yaml
@@ -1,7 +1,7 @@
 konami_id: 19382
 password: 30432463
 name:
-  en: Demone Valmonica
+  en: Dimonno Vaalmonica
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is in your hand: You can discard 1 other card; place both this card and 1 "Angelo Valmonica" from your Deck in your Pendulum Zone. During your Main Phase, if this card was Normal or Special Summoned this turn: You can banish 1 "Valmonica" Normal Spell/Trap from your GY; apply that Spell/Trap Card's effect that includes taking damage when that card is activated. You can only use each monster effect of "Demone Valmonica" once per turn.
+    If this card is in your hand: You can discard 1 other card; place both this card and 1 "Angello Vaalmonica" from your Deck in your Pendulum Zone. During your Main Phase, if this card was Normal or Special Summoned this turn: You can banish 1 "Vaalmonica" Normal Spell/Trap from your GY; apply that Spell/Trap Card's effect that includes taking damage when that card is activated. You can only use each monster effect of "Dimonno Vaalmonica" once per turn.
   de:
   es:
   fr:
@@ -47,10 +47,10 @@ pendulum_effect:
   zh-TW:
   zh-CN:
 series:
-- Valmonica
+- Vaalmonica
 images:
 - index: 1
-  image: DemoneValmonica-DBVS-JP-C.png
+  image: DimonnoVaalmonica-DBVS-JP-C.png
 sets:
   ja:
   - set_number: DBVS-JP032
@@ -63,8 +63,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1001771
