--- a/data/cards/39210885.yaml
+++ b/data/cards/39210885.yaml
@@ -1,7 +1,7 @@
 konami_id: 19385
 password: 39210885
 name:
-  en: Angelic-Demonic Selector - "Valmonica"
+  en: Vaalmonica, the Agathokakological Voice
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    When this card is activated: You can add 1 "Valmonica" monster from your Deck to your hand. If the 3rd Resonance Counter is placed on a card in your Pendulum Zone (except during the Damage Step): You can target 1 monster your opponent controls; take control of it until the End Phase, but it cannot declare an attack. You can only use this effect of "Angelic-Demonic Selector - "Valmonica"" once per turn. You can only activate 1 "Angelic-Demonic Selector - "Valmonica"" per turn.
+    When this card is activated: You can add 1 "Vaalmonica" monster from your Deck to your hand. If the 3rd Resonance Counter is placed on a card in your Pendulum Zone (except during the Damage Step): You can target 1 monster your opponent controls; take control of it until the End Phase, but it cannot declare an attack. You can only use this effect of "Vaalmonica, the Agathokakological Voice" once per turn. You can only activate 1 "Vaalmonica, the Agathokakological Voice" per turn.
   de:
   es:
   fr:
@@ -29,10 +29,10 @@ text:
 card_type: Spell
 property: Field
 series:
-- Valmonica
+- Vaalmonica
 images:
 - index: 1
-  image: AngelicDemonicSelectorValmonica-DBVS-JP-C.png
+  image: VaalmonicatheAgathokakologicalVoice-DBVS-JP-C.png
 sets:
   ja:
   - set_number: DBVS-JP035
@@ -44,8 +44,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1001779
