--- a/data/cards/78598237.yaml
+++ b/data/cards/78598237.yaml
@@ -1,7 +1,7 @@
 konami_id: 19388
 password: 78598237
 name:
-  en: Valmonica Intonare
+  en: Vaalmonica Intonare
   de:
   es:
   fr:
@@ -15,10 +15,10 @@ name:
   zh-CN:
 text:
   en: |-
-    Apply 1 of these effects (your opponent's choice, if you do not have a "Valmonica" card in your Pendulum Zone).
+    Apply 1 of these effects (your opponent's choice, if you do not have a "Vaalmonica" card in your Pendulum Zone).
     ● Gain 500 LP, then, if you have a monster in your GY that can be Special Summoned, your opponent chooses 1 of them for you to Special Summon.
     ● Take 500 damage, then you can add 1 Level 4 monster from your GY to your hand.
-    You can only activate 1 "Valmonica Intonare" per turn.
+    You can only activate 1 "Vaalmonica Intonare" per turn.
   de:
   es:
   fr:
@@ -34,10 +34,10 @@ text:
 card_type: Spell
 property: Normal
 series:
-- Valmonica
+- Vaalmonica
 images:
 - index: 1
-  image: ValmonicaIntonare-DBVS-JP-SR.png
+  image: VaalmonicaIntonare-DBVS-JP-SR.png
 sets:
   ja:
   - set_number: DBVS-JP038
@@ -48,8 +48,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1001783
