--- a/data/cards/31971040.yaml
+++ b/data/cards/31971040.yaml
@@ -1,7 +1,7 @@
 konami_id: 19390
 password: 31971040
 name:
-  en: Valmonica of the Selecting Melody
+  en: Vaalmonica Chosen Melody
   de:
   es:
   fr:
@@ -15,10 +15,10 @@ name:
   zh-CN:
 text:
   en: |-
-    You must control a "Valmonica" Monster Card to activate and to resolve this effect. Apply 1 of these effects, or, if you control a "Valmonica" Link Monster, you can apply both, in sequence.
-    ● Gain 500 LP, also your opponent cannot target "Valmonica" Monster Cards you control with card effects this turn.
+    You must control a "Vaalmonica" Monster Card to activate and to resolve this effect. Apply 1 of these effects, or, if you control a "Vaalmonica" Link Monster, you can apply both, in sequence.
+    ● Gain 500 LP, also your opponent cannot target "Vaalmonica" Monster Cards you control with card effects this turn.
     ● Take 500 damage, then you can negate the effects of 1 Effect Monster your opponent controls, until the end of this turn.
-    You can only activate 1 "Valmonica of the Guiding Rhythm" per turn.
+    You can only activate 1 "Vaalmonica Followed Rhythm" per turn.
   de:
   es:
   fr:
@@ -34,10 +34,10 @@ text:
 card_type: Trap
 property: Normal
 series:
-- Valmonica
+- Vaalmonica
 images:
 - index: 1
-  image: ValmonicaoftheSelectingMelody-DBVS-JP-C.png
+  image: VaalmonicaChosenMelody-DBVS-JP-C.png
 sets:
   ja:
   - set_number: DBVS-JP040
@@ -49,8 +49,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1001786
