--- a/data/cards/42193638.yaml
+++ b/data/cards/42193638.yaml
@@ -1,7 +1,7 @@
 konami_id: 19387
 password: 42193638
 name:
-  en: Valmonica Versare
+  en: Vaalmonica Versare
   de:
   es:
   fr:
@@ -15,10 +15,10 @@ name:
   zh-CN:
 text:
   en: |-
-    Apply 1 of these effects (your opponent's choice, if you do not have a "Valmonica" card in your Pendulum Zone).
-    ● Gain 500 LP, then you can excavate cards from the top of your Deck until you excavate a "Valmonica" card, and if you do, add it to your hand, also shuffle the rest into the Deck.
-    ● Take 500 damage, then you can send 1 "Valmonica" card from your Deck to the GY, except "Valmonica Versare".
-    You can only activate 1 "Valmonica Versare" per turn.
+    Apply 1 of these effects (your opponent's choice, if you do not have a "Vaalmonica" card in your Pendulum Zone).
+    ● Gain 500 LP, then you can excavate cards from the top of your Deck until you excavate a "Vaalmonica" card, and if you do, add it to your hand, also shuffle the rest into the Deck.
+    ● Take 500 damage, then you can send 1 "Vaalmonica" card from your Deck to the GY, except "Vaalmonica Versare".
+    You can only activate 1 "Vaalmonica Versare" per turn.
   de:
   es:
   fr:
@@ -34,10 +34,10 @@ text:
 card_type: Spell
 property: Normal
 series:
-- Valmonica
+- Vaalmonica
 images:
 - index: 1
-  image: ValmonicaVersare-DBVS-JP-SR.png
+  image: VaalmonicaVersare-DBVS-JP-SR.png
 sets:
   ja:
   - set_number: DBVS-JP037
@@ -48,8 +48,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1001780
